// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing ShowCredentialInfoModal component should snapshot works with english language 1`] = `
<div
  aria-hidden="true"
>
  <div
    aria-describedby="description"
    aria-labelledby="modal-title"
    class="ForwardRef(Modal)-root ForwardRef(Modal)-root"
    data-testid="modal-alert"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root WithStyles(ForwardRef(Backdrop))-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root Component-root Component-root ForwardRef(Fade)-root MuiPaper-elevation5 MuiPaper-rounded"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-name"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Name:
               
            </span>
            dfgberger
          </p>
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-login"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Login:
               
            </span>
            gregregregeger
          </p>
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-password"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Password:
               
            </span>
            wdqdwqdqw
          </p>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
        data-testid="button-show-credential-info-ok"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Ok
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`testing ShowCredentialInfoModal component should snapshot works with portuguese language 1`] = `
<div
  aria-hidden="true"
>
  <div
    aria-describedby="description"
    aria-labelledby="modal-title"
    class="ForwardRef(Modal)-root ForwardRef(Modal)-root"
    data-testid="modal-alert"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root WithStyles(ForwardRef(Backdrop))-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root Component-root Component-root ForwardRef(Fade)-root MuiPaper-elevation5 MuiPaper-rounded"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-name"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Nome:
               
            </span>
            dfgberger
          </p>
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-login"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Login:
               
            </span>
            gregregregeger
          </p>
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-password"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Senha:
               
            </span>
            wdqdwqdqw
          </p>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
        data-testid="button-show-credential-info-ok"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Ok
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`testing ShowCredentialInfoModal component should snapshot works with spanish language 1`] = `
<div
  aria-hidden="true"
>
  <div
    aria-describedby="description"
    aria-labelledby="modal-title"
    class="ForwardRef(Modal)-root ForwardRef(Modal)-root"
    data-testid="modal-alert"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root WithStyles(ForwardRef(Backdrop))-root"
      style="opacity: 1; webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root Component-root Component-root ForwardRef(Fade)-root MuiPaper-elevation5 MuiPaper-rounded"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          class="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-name"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Nombre:
               
            </span>
            dfgberger
          </p>
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-login"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Login:
               
            </span>
            gregregregeger
          </p>
          <p
            class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            data-testid="typography-show-credential-info-password"
          >
            <span
              class="MuiTypography-root Component-root Component-root MuiTypography-body1"
            >
              Contraseña:
               
            </span>
            wdqdwqdqw
          </p>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
        data-testid="button-show-credential-info-ok"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Ok
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</div>
`;
